--- a/trunk/ResumeWebSite/Resume/index.htm
+++ b/trunk/ResumeWebSite/Resume/index.htm
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Clear Resume - Responsive</title>
+<title>Shaunak Vairagare Resume</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="">
-<meta name="author" content="Sabaina Bukhari">
+<meta name="description" content="Shaunak Vairagare GIS Developer Resume">
+<meta name="author" content="Shaunak Vairagare">
 <!-- bootstrap, font awesome, colorpicker -->
 <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
 <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-responsive.min.css">
@@ -17,12 +17,6 @@
 <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-<!--
-    Template:	Clear Resume (Responsive)
-    Creator:	Sabaina Bukhari (sabainabukhari@gmail.com)
-    Website:	http://www.egreenwebservices.com
-    Date:		09/27/2012
--->
 </head>
 
 <body>
@@ -45,21 +39,28 @@
 	<!-- name and contact info -->
 	<div class="row" id="name-contact">
 		<div class="span12">
-			<h1>Jane Doe</h1>
+			<h1>Shaunak Vairagare</h1>
+			<h4>&nbsp;GIS Web Developer</h4>
 			<hr/>
 			<div class="row">
 				<div class="span4">
 					<p>
 						<small>
-						<i class="icon-envelope"></i><span class="text-info">janedoe@email.com</span><br/>
-						<i class="icon-phone"></i><span class="text-info">123-123-1234</span><br/>
-						<i class="icon-map-marker"></i><span class="text-info">1234 Main St Houston TX 70000</span>
+						<i class="icon-envelope"></i><span class="text-info">shaunakv1@gmail.com</span><br/>
+						<i class="icon-phone"></i><span class="text-info">832-603-9023</span><br/>
+						<i class="icon-map-marker"></i><span class="text-info">1000 Bonieta Harrold Dr #12106 Charleston SC 29414</span>
 						</small>
 					</p>
 				</div>
 				<div class="span8">
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut rutrum arcu eu augue bibendum blandit malesuada nulla vehicula. Sed at quam quam. Nulla ipsum arcu, aliquam nec commodo eu, rhoncus ut risus. Nunc commodo elit eget dui imperdiet et porta nunc pellentesque.
+						<span class="label label-info">Innovative software engineer</span> offering six years of experience in Web development and GIS involving full software development lifecycle – from concept through delivery of next-generation applications and customizable solutions.
+					</p>
+					<p>
+						<span class="label label-info">Expert in advanced development methodologies</span>, tools and processes. Strong OOP and Design Patterns skills. Deep understanding of OOAD and Agile methods.
+					</p>
+					<p>
+						<span class="label label-info">Creative problem solver</span> and experience in designing software workflows for complex Geospatial applications on web, desktop and mobile platforms.
 					</p>
 				</div>
 			</div>
@@ -71,20 +72,121 @@
 	<!-- technical skills -->
 	<div class="row" id="technical-skills">
 		<div class="span2">
-			<h2><span>&sect;</span> Technical Skills</h2>
+			<h2><span>&sect;</span>Technical Skills</h2>
 		</div>
-		<div class="span10">
+		<div class="span5">
 			<ul class="unstyled">
-				<li class="icon-ok">Lorem <span class="label label-info">ipsum</span> dolor sit amet, consectetur adipiscing elit.</li>
-				<li class="icon-ok">Ut rutrum arcu eu augue bibendum blandit <span class="label label-info">malesuada</span> nulla vehicula. </li>
-				<li class="icon-ok"><span class="label label-info">Nulla</span> ipsum arcu, aliquam nec commodo eu, rhoncus ut risus. </li>
-				<li class="icon-ok">Nunc commodo elit eget dui imperdiet et porta nunc <span class="label label-info">pellentesque</span>. </li>
-				<li class="icon-ok">Quisque <span class="label label-info">pellentesque</span>, augue eget dignissim facilisis, mi nisi varius ante, id dictum dolor est consequat sem. </li>
+				<li class="icon-ok"><span class="label label-info">Front End</span> JavaScript, jQuery, AngularJS, HTML5, JSON, RequireJS</li>
+				<li class="icon-ok"><span class="label label-info">Web Frameworks</span> Node.js, Ruby on Rails, Spring, Struts, Hibernate</li>
+				<li class="icon-ok"><span class="label label-info">Databases</span> MongoDB, MySQL, PostgreSQL, MS SQL Server 2008 </li>
+				<li class="icon-ok"><span class="label label-info">Servers</span> Apache2, Tomcat, JBOSS</li>
+				<li class="icon-ok"><span class="label label-info">Mobile</span> jQuery Mobile, Sencha Touch 2, iOS</li>
+				<li class="icon-ok"><span class="label label-info">Languages</span> Java, Ruby, Python</li>
+				<li class="icon-ok"><span class="label label-info">Process Tools</span> ANT, Jenkins CI, CruiseControl.rb</li>
+			</ul>
+		</div>
+		<div class="span5">
+			<ul class="unstyled">
+				<li class="icon-ok"><span class="label label-info">GIS Servers</span> GeoServer, ArcGIS Server, LocationGuru SmartGeo</li>
+				<li class="icon-ok"><span class="label label-info">Map API</span> OpenLayers, Leaflet, TileMill, Google Maps, BingMaps</li>
+				<li class="icon-ok"><span class="label label-info">GIS Services</span> ArcGIS 9+, WMS, WFS, GeoJSON, GML, KML, GeoRSS</li>
+				<li class="icon-ok"><span class="label label-info">GIS Tools</span> ArcGIS, FME, GDAL, LibLAS, GeoTools, Java Topology Suite</li>
+				<li class="icon-ok"><span class="label label-info">GIS Data</span> LiDAR, GeoTIFF, LAS, ShapeFile, GDF</li>
+				<li class="icon-ok"><span class="label label-info">Carto Databases</span> PostgreSQL/PostGIS , MS SQL server 2008 Spatial</li>
+				<li class="icon-ok"><span class="label label-info">Data Formats</span> Tele Atlas, NavTeq, Lead Dog, Map My India</li>
 			</ul>
 		</div>
 	</div>
 	<hr/>
 	<!-- /technical skills -->
+
+	<!-- education -->
+	<div class="row" id="education">
+		<div class="span2">
+			<h2><span>&sect;</span> Education</h2>
+		</div>
+		<div class="span10">
+			<table class="table table-hover table-striped table-bordered table-condensed">
+			<tbody>
+			<tr>
+				<td>
+					Master of Science in Computer Science
+				</td>
+				<td>
+					University of Houston, TX
+				</td>
+				<td>
+					Aug 2009 to Dec 2011
+				</td>
+			</tr>
+			<tr>
+				<td>
+					Bachelor of Engineering in Computer Science
+				</td>
+				<td>
+					RCOEM, Nagpur, India.
+				</td>
+				<td>
+					Aug 2003 to May 2007
+				</td>
+			</tr>
+			</tbody>
+			</table>
+		</div>
+	</div>
+	<hr/>
+	<!-- /education -->
+
+	<!-- work experience -->
+	<div class="row" id="work-experience">
+		<div class="span2">
+			<h2><span>&sect;</span> Work Experience</h2>
+		</div>
+		<div class="span2">
+			<h3>NOAA Coastal Services Center</h3>
+			<p>
+				<small>
+				<i class="icon-star-empty"></i> GIS Developer<br/>
+				<i class="icon-calendar"></i>&nbsp;&nbsp;Jun 2012 <em>to</em> Current </small>
+			</p>
+		</div>
+		<div class="span2">
+			<h3>University Of Houston</h3>
+			<p>
+				<small>
+				<i class="icon-star-empty"></i> GIS Developer<br/>
+				<i class="icon-calendar"></i>&nbsp;&nbsp;Mon YYYY <em>to</em> Mon YYYY </small>
+			</p>
+		</div>
+		<div class="span2">
+			<h3>LocationGuru</h3>
+			<p>
+				<small>
+				<i class="icon-star-empty"></i> Software Developer<br/>
+				<i class="icon-calendar"></i>&nbsp;&nbsp;Aug 2009 <em>to</em> Jun 2012 </small>
+			</p>
+		</div>
+		<div class="span2">
+			<h3>GlobalLogic</h3>
+			<p>
+				<small>
+				<i class="icon-star-empty"></i> Student Intern<br/>
+				<i class="icon-calendar"></i>&nbsp;&nbsp;Mon YYYY <em>to</em> Mon YYYY </small>
+			</p>
+		</div>
+		<div class="span2">
+
+			<h3>Company 5</h3>
+			<p>
+				<small>
+				<i class="icon-star-empty"></i> Position<br/>
+				<i class="icon-calendar"></i>&nbsp;&nbsp;Mon YYYY <em>to</em> Mon YYYY </small>
+			</p>
+		</div>
+
+	</div>
+	<hr/>
+	<!-- /work experience -->
 
 	<!-- sample work -->
 	<div class="row" id="sample-work-row1">
@@ -92,21 +194,21 @@
 			<h2><span>&sect;</span> Sample Work</h2>
 		</div>
 		<div class="span2">
-			<a class="thumbnail" target="_blank" href="#" title="Wordpress"><img src="http://placehold.it/200x100" alt=""></a>
+			<a class="thumbnail" target="_blank" href="http://www.csc.noaa.gov/ccapatlas/" title="Land Cover Atlas"><img src="assets/img/lca.png" alt=""></a>
 			<p>
-				<small>Project 1 <a target="_blank" href="#"><i class="icon-external-link"></i></a></small>
+				<small>Land Cover Atlas <a target="_blank" href="#"><i class="icon-external-link"></i></a></small>
 			</p>
 		</div>
 		<div class="span2">
-			<a class="thumbnail" target="_blank" href="#" title="New Design"><img src="http://placehold.it/200x100" alt=""></a>
+			<a class="thumbnail" target="_blank" href="http://floodwatch.ie.uh.edu/" title="Flood Information Distribution System"><img src="assets/img/fids.png" alt=""></a>
 			<p>
-				<small>Project 2 <a target="_blank" href="#"><i class="icon-external-link"></i></a></small>
+				<small>Flood Info Distribution <a target="_blank" href="#"><i class="icon-external-link"></i></a></small>
 			</p>
 		</div>
 		<div class="span2">
-			<a class="thumbnail" target="_blank" href="#" title="Redesign"><img src="http://placehold.it/200x100" alt=""></a>
+			<a class="thumbnail" target="_blank" href="http://locationguru.com/platform.php#platformoverview" title="SmartGeo Platform"><img src="assets/img/sgp.png" alt=""></a>
 			<p>
-				<small>Project 3 <a target="_blank" href="#"><i class="icon-external-link"></i></a></small>
+				<small>SmartGeo Platform <a target="_blank" href="#"><i class="icon-external-link"></i></a></small>
 			</p>
 		</div>
 		<div class="span2">
@@ -157,99 +259,12 @@
 			</p>
 		</div>
 	</div>
-	<hr/>
 	<!-- /sample work -->
-
-	<!-- education -->
-	<div class="row" id="education">
-		<div class="span2">
-			<h2><span>&sect;</span> Education</h2>
-		</div>
-		<div class="span10">
-			<table class="table table-hover table-striped table-bordered table-condensed">
-			<tbody>
-			<tr>
-				<td>
-					Degree (Major)
-				</td>
-				<td>
-					Sample Institute or University
-				</td>
-				<td>
-					YYYY to YYYY
-				</td>
-			</tr>
-			<tr>
-				<td>
-					Degree (Major)
-				</td>
-				<td>
-					Sample Institute or University
-				</td>
-				<td>
-					YYYY to YYYY
-				</td>
-			</tr>
-			</tbody>
-			</table>
-		</div>
-	</div>
-	<hr/>
-	<!-- /education -->
-
-	<!-- work experience -->
-	<div class="row" id="work-experience">
-		<div class="span2">
-			<h2><span>&sect;</span> Work Experience</h2>
-		</div>
-		<div class="span2">
-			<h3>Company 1</h3>
-			<p>
-				<small>
-				<i class="icon-star-empty"></i> Position<br/>
-				<i class="icon-calendar"></i>&nbsp;&nbsp;Mon YYYY <em>to</em> Current </small>
-			</p>
-		</div>
-		<div class="span2">
-			<h3>Company 2</h3>
-			<p>
-				<small>
-				<i class="icon-star-empty"></i> Position<br/>
-				<i class="icon-calendar"></i>&nbsp;&nbsp;Mon YYYY <em>to</em> Mon YYYY </small>
-			</p>
-		</div>
-		<div class="span2">
-			<h3>Company 3</h3>
-			<p>
-				<small>
-				<i class="icon-star-empty"></i> Position<br/>
-				<i class="icon-calendar"></i>&nbsp;&nbsp;Mon YYYY <em>to</em> Mon YYYY </small>
-			</p>
-		</div>
-		<div class="span2">
-			<h3>Company 4</h3>
-			<p>
-				<small>
-				<i class="icon-star-empty"></i> Position<br/>
-				<i class="icon-calendar"></i>&nbsp;&nbsp;Mon YYYY <em>to</em> Mon YYYY </small>
-			</p>
-		</div>
-		<div class="span2">
-
-			<h3>Company 5</h3>
-			<p>
-				<small>
-				<i class="icon-star-empty"></i> Position<br/>
-				<i class="icon-calendar"></i>&nbsp;&nbsp;Mon YYYY <em>to</em> Mon YYYY </small>
-			</p>
-		</div>
-	</div>
-	<!-- /work experience -->
 
 	<!-- footer -->
 	<footer>
 	<p>
-		<small>Made using <a href="http://twitter.github.com/bootstrap/index.html">Bootstrap (2.1.1)</a> and <a href="http://fortawesome.github.com/Font-Awesome/">Font Awesome</a> by <a href="http://egreenwebservices.com/#!/pages/contact">Sabaina Bukhari</a> at <a href="http://www.egreenwebservices.com">Egreen Web Services LLC</a></small>
+		<small> (c) 2013 <a href="http://shaunakvairagare.com">Shaunak Vairagare</a> Last Update on Feb 15th, 2013 </small>
 	</p>
 	</footer>
 	<!-- /footer -->
