--- a/trunk/ResumeWebSite/Resume/index.html
+++ b/trunk/ResumeWebSite/Resume/index.html
@@ -188,7 +188,180 @@
 	<hr/>
 	<!-- /work experience -->
 
-	<!-- sample work -->
+    <!-- projects -->
+    <div class="row" id="projects">
+        <div class="span2">
+            <h2><span>&sect;</span> Projects</h2>
+        </div>
+        <div class="span10">
+            <!-- project -->
+            <div class="row">
+                <div class="span6"><h3>Flood Information Distribution System</h3></div>
+                <div class="span4">
+                    <!-- <div class="float-right"> -->
+                        <i class="icon-calendar"></i>&nbsp;&nbsp;Aug 2009 <em>to</em> Jun 2012 </small>
+                        &nbsp;&nbsp;&nbsp;&nbsp;<i class="icon-map-marker"></i>&nbsp;&nbsp;University Of Houston
+                    <!-- </div> -->
+                </div>
+            </div>
+            <div class="row">
+                <div class="span10">
+                    <p>
+                        A Ruby on Rails based GIS system for flood warning and alert system in Harris County using existing sensor networks of various agencies like Houston Transtar, HCFCD , USGS, City of Houston Public Works.
+                        This project is going to be used by EMS agencies like 911, 311, and will also be available to public.
+                    </p>
+                    <p>
+
+                        <span class="label label-info">Key Features:</span> Java, Ruby, Rails, MSSQL Server 2008 Spatial, Map Interface Web Site and Mobile client for Emergency dispatch vehicles, flood data broadcast using VHF (Public Broadcasting, Houston) in case of emergency, ArcGIS for LIDR data, Bing maps, creating Shapefiles for sensor networks, flood emergency level calculations using Historical Flood Data and LiDAR. Real time flood water rendering on map.
+                    </p>
+                </div>
+            </div>
+            <hr/>
+            <!-- /project -->
+
+            <!-- project -->
+            <div class="row">
+                <div class="span6"><h3>GeoLocator</h3></div>
+                <div class="span4">
+                    <!-- <div class="float-right"> -->
+                        <i class="icon-calendar"></i>&nbsp;&nbsp;Jan 2011 <em>to</em> May 2011 </small>
+                        &nbsp;&nbsp;&nbsp;&nbsp;<i class="icon-map-marker"></i>&nbsp;&nbsp;Baker Hughes, Houston
+                    <!-- </div> -->
+                </div>
+            </div>
+            <div class="row">
+                <div class="span10">
+                    <p>
+                        A sponsored course project. Developed an iPhone application backed with a GIS database and Ruby on Rails web service to find and service wells.
+                    </p>
+                    <p>
+                        <span class="label label-info">Key Features:</span> iOS Application, AppStore, Ruby on Rails, Agile, Geolocation, Spatial Search, Web-Services
+                    </p>
+                </div>
+            </div>
+            <hr/>
+            <!-- /project -->
+
+            <!-- project -->
+            <div class="row">
+                <div class="span6"><h3>Arduino Farming Aid Sensor Networks</h3></div>
+                <div class="span4">
+                    <!-- <div class="float-right"> -->
+                        <i class="icon-calendar"></i>&nbsp;&nbsp;Jan 2011 <em>to</em> May 2011 </small>
+                        &nbsp;&nbsp;&nbsp;&nbsp;<i class="icon-map-marker"></i>&nbsp;&nbsp;University Of Houston
+                    <!-- </div> -->
+                </div>
+            </div>
+            <div class="row">
+                <div class="span10">
+                    <p>
+                        A project for Cyber Physical Systems Course.Wireless Sensor Networks using Arduino to aid Farming. Has a web front-end developed in Ruby on Rails to control the sensors and display statistics etc.
+                    </p>
+                    <p>
+                        <span class="label label-info">Key Features:</span> Arduino, Embeded Development, Ruby on Rails, Sensor Networks
+                    </p>
+                </div>
+            </div>
+            <hr/>
+            <!-- /project -->
+
+            <!-- project -->
+            <div class="row">
+                <div class="span6"><h3>SmartGeo</h3></div>
+                <div class="span4">
+                    <!-- <div class="float-right"> -->
+                        <i class="icon-calendar"></i>&nbsp;&nbsp;Aug 2007 <em>to</em> Jun 2009 </small>
+                        &nbsp;&nbsp;&nbsp;&nbsp;<i class="icon-map-marker"></i>&nbsp;&nbsp;LocationGuru, India
+                    <!-- </div> -->
+                </div>
+            </div>
+            <div class="row">
+                <div class="span10">
+                    <p>
+                        Java-based Software Development, Product Planning and Engineering, Research and LBS Platform Development
+                    </p>
+                    <p>
+                        <span class="label label-info">Key Features:</span> Java Web Development, LBS Platform, Image Processing, Real Time Navigation Algorithms, Geospatial Information System, Map Tiling and Rendering Algorithms, Geocoding, Reverse-Geocoding, POI, GIS Hosting, GPS positioning systems, LBS Product concept Planning and Design
+                    </p>
+                </div>
+            </div>
+            <hr/>
+            <!-- /project -->
+
+            <!-- project -->
+            <div class="row">
+                <div class="span6"><h3>Location Diary</h3></div>
+                <div class="span4">
+                    <!-- <div class="float-right"> -->
+                        <i class="icon-calendar"></i>&nbsp;&nbsp;Aug 2006 <em>to</em> Jun 2007 </small>
+                        &nbsp;&nbsp;&nbsp;&nbsp;<i class="icon-map-marker"></i>&nbsp;&nbsp;GlobalLogic Inc, India
+                    <!-- </div> -->
+                </div>
+            </div>
+            <div class="row">
+                <div class="span10">
+                    <p>
+                        A mobile based Location Based Services (LBS) application. Designed and implemented this application in J2ME mobile platform for turn-by-turn navigation instructions.
+                    </p>
+                    <p>
+                        <span class="label label-info">Key Features:</span> J2ME, Path-Planning Algorithms, Mobile Maps, GPS , Graph Optimizations
+                    </p>
+                </div>
+            </div>
+             <hr/>
+            <!-- /project -->
+
+            <!-- project -->
+            <div class="row">
+                <div class="span6"><h3>Path Finding Algorithms for Natural Terrain Explorers</h3></div>
+                <div class="span4">
+                    <!-- <div class="float-right"> -->
+                        <i class="icon-calendar"></i>&nbsp;&nbsp;Jul 2006 <em>to</em> May 2007 </small>
+                        &nbsp;&nbsp;&nbsp;&nbsp;<i class="icon-map-marker"></i>&nbsp;&nbsp;RKNEC, India
+                    <!-- </div> -->
+                </div>
+            </div>
+            <div class="row">
+                <div class="span10">
+                    <p>
+                        Designed and implemented simulation of verious navigation algorithms for autonomous robotic explorers.
+                    </p>
+                    <p>
+                        <span class="label label-info">Key Features:</span> Shortest Path and Efficient Navigation algorithms for Space Exploration, Graphical Simulation in Java, and in VC++ using DirectX Graphics technology.
+                    </p>
+                </div>
+            </div>
+            <hr/>
+            <!-- /project -->
+
+            <!-- project -->
+            <div class="row">
+                <div class="span6"><h3>Micro-Mouse</h3></div>
+                <div class="span4">
+                    <!-- <div class="float-right"> -->
+                        <i class="icon-calendar"></i>&nbsp;&nbsp;Jan 2006 <em>to</em> Jul 2006 </small>
+                        &nbsp;&nbsp;&nbsp;&nbsp;<i class="icon-map-marker"></i>&nbsp;&nbsp;IIT Bombay, India
+                    <!-- </div> -->
+                </div>
+            </div>
+            <div class="row">
+                <div class="span10">
+                    <p>
+                        A Self-Guided, Maze-Solving Robot. Made maze solving robot. Also implemented simulator for Navigation Algorithms for the autonomous robot.
+                    </p>
+                    <p>
+                        <span class="label label-info">Key Features:</span> Autonomous Robotics, Embedded Systems programming, Graphical Simulation in Java, Decision-Making Algorithms.
+                    </p>
+                </div>
+            </div>
+            <!-- /project -->
+
+        </div>
+    </div>
+    <hr/>
+    <!-- /projects -->
+
+    <!-- sample work -->
 	<div class="row" id="sample-work-row1">
 		<div class="span2">
 			<h2><span>&sect;</span> Sample Work</h2>
