added world at night project

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						<span class="label label-info">Expert in advanced development methodologies</span>, tools and processes. Strong OOP and Design Patterns skills. Deep understanding of OOAD and Agile methods.
 					</p>
 					<p>
-						<span class="label label-info">Creative problem solver</span> and experience in designing software workflows for complex Geospatial applications on web, desktop and mobile platforms.
+						<span class="label label-info">Creative problem solver</span> and experience in designing software work-flows for complex Geo-spatial applications on web, desktop and mobile platforms.
 					</p>
 				</div>
 			</div>
@@ -194,6 +194,37 @@
             <h2><span>&sect;</span> Projects</h2>
         </div>
         <div class="span10">
+             <!-- project -->
+            <div class="row">
+                <div class="span6"><h3>Satellite Imagery to Assess Rural Electrification</h3></div>
+                <div class="span4">
+                    <!-- <div class="float-right"> -->
+                        <i class="icon-calendar"></i>&nbsp;&nbsp;Apr 2012 <em>to</em> Apr 2012 </small>
+                        &nbsp;&nbsp;&nbsp;&nbsp;<i class="icon-map-marker"></i>&nbsp;&nbsp;University Of Houston
+                    <!-- </div> -->
+                </div>
+            </div>
+            <div class="row">
+                <div class="span10">
+                    <p>
+                        Developed this project as a part of <span class="label label-info"><a href="http://2012.spaceappschallenge.org/home/">NASA International Space Apps Challenge 2012</a></span>. This was a 24 hour Hackthon, in which over 2000 people participated worldwide. 
+                        Our team won the <span class="label label-info">"Global Impact Award"</span> for the <a href="http://2012.spaceappschallenge.org/challenge/satellite-imagery-assess-rural-electrification/">Satellite Imagery to Assess Rural Electrification</a> challenge.<br>
+                    </p>
+                    
+                    <p>    
+                        Solution was <span class="label label-info">World at Night</span> which is a web based mapping tool that shows who on planet earth has access to light. It allows users to overlay Night Time Satellite Imagery data with world population and other data to which areas still don't have access to electricity.
+                        We also provided tools to calculate which kind of source of electricity (solar, hydro, wind, or traditional) is likely to be most feasible to electrify that region.
+                    </p>
+                    
+                    <p>
+
+                        <span class="label label-info">Key Features:</span> OpenLayers, Geoserver, Geo-TIFF, ArcGIS, Ruby on Rails, GIS Analysis
+                    </p>
+                </div>
+            </div>
+            <hr/>
+            <!-- /project -->
+
             <!-- project -->
             <div class="row">
                 <div class="span6"><h3>Flood Information Distribution System</h3></div>
@@ -212,7 +243,7 @@
                     </p>
                     <p>
 
-                        <span class="label label-info">Key Features:</span> Java, Ruby, Rails, MSSQL Server 2008 Spatial, Map Interface Web Site and Mobile client for Emergency dispatch vehicles, flood data broadcast using VHF (Public Broadcasting, Houston) in case of emergency, ArcGIS for LIDR data, Bing maps, creating Shapefiles for sensor networks, flood emergency level calculations using Historical Flood Data and LiDAR. Real time flood water rendering on map.
+                        <span class="label label-info">Key Features:</span> Java, OpenLayers, Ruby, Rails, GeoServer, MSSQL Server 2008 Spatial, Map Interface Web Site and Mobile client for Emergency dispatch vehicles, flood data broadcast using VHF (Public Broadcasting, Houston) in case of emergency, ArcGIS for LIDR data, Bing maps, creating Shape-files for sensor networks, flood emergency level calculations using Historical Flood Data and LiDAR. Real time flood water rendering on map.
                     </p>
                 </div>
             </div>
@@ -324,7 +355,7 @@
             <div class="row">
                 <div class="span10">
                     <p>
-                        Designed and implemented simulation of verious navigation algorithms for autonomous robotic explorers.
+                        Designed and implemented simulation of various navigation algorithms for autonomous robotic explorers.
                     </p>
                     <p>
                         <span class="label label-info">Key Features:</span> Shortest Path and Efficient Navigation algorithms for Space Exploration, Graphical Simulation in Java, and in VC++ using DirectX Graphics technology.
