--- a/trunk/ResumeWebSite/Resume/index.html
+++ b/trunk/ResumeWebSite/Resume/index.html
@@ -200,7 +200,7 @@
                 <div class="span4">
                     <!-- <div class="float-right"> -->
                         <i class="icon-calendar"></i>&nbsp;&nbsp;Apr 2012 <em>to</em> Apr 2012 </small>
-                        &nbsp;&nbsp;&nbsp;&nbsp;<i class="icon-map-marker"></i>&nbsp;&nbsp;University Of Houston
+                        &nbsp;&nbsp;&nbsp;&nbsp;<i class="icon-map-marker"></i>&nbsp;&nbsp;San Francisco
                     <!-- </div> -->
                 </div>
             </div>
@@ -218,7 +218,7 @@
                     
                     <p>
 
-                        <span class="label label-info">Key Features:</span> OpenLayers, Geoserver, Geo-TIFF, ArcGIS, Ruby on Rails, GIS Analysis
+                        <span class="label label-info">Key Features:</span> Interactive Web Map, OpenLayers, Geoserver, Geo-TIFF, ArcGIS, Ruby on Rails, GIS Analysis
                     </p>
                 </div>
             </div>
