--- a/trunk/ResumeWebSite/Resume/index.html
+++ b/trunk/ResumeWebSite/Resume/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>Shaunak Vairagare Resume</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="Shaunak Vairagare GIS Developer Resume">
+<meta name="description" content="Shaunak Vairagare GIS Developer Resume Home">
 <meta name="author" content="Shaunak Vairagare">
 <!-- bootstrap, font awesome, colorpicker -->
 <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -29,7 +29,7 @@
 		<div class="span12">
 			<div class="btn-group pull-right">
 				<a class="btn btn-large top-buttons" title="Print" href="#"><i class="icon-print"></i></a>
-				<a class="btn btn-large top-buttons" title="Download" href="#"><i class="icon-download"></i></a>
+				<a class="btn btn-large top-buttons" title="Download" href="resume.pdf"><i class="icon-download"></i></a>
 				<a class="btn btn-large top-buttons" id="cp" data-color-format="hex" data-color="rgb(255, 255, 255)" title="Change Color"><i class="icon-cogs"></i></a>
 			</div>
 		</div>
