--- a/trunk/ResumeWebSite/Resume/index.html
+++ b/trunk/ResumeWebSite/Resume/index.html
@@ -416,53 +416,19 @@
 			</p>
 		</div>
 		<div class="span2">
-			<a class="thumbnail" target="_blank" href="#" title="Custom CMS"><img src="http://placehold.it/200x100" alt=""></a>
-			<p>
-				<small>Project 4 <a target="_blank" href="#"><i class="icon-external-link"></i></a></small>
-			</p>
-		</div>
+            <a class="thumbnail" target="_blank" href="http://youtu.be/KgJYB2eqbPs" title="Micromouse Robot"><img src="assets/img/micro_mouse.png" alt=""></a>
+            <p>
+                <small>Micromouse <a target="_blank" href="#"><i class="icon-external-link"></i></a></small>
+            </p>
+        </div>
 		<div class="span2">
-			<a class="thumbnail" target="_blank" href="#" title="Wordpress"><img src="http://placehold.it/200x100" alt=""></a>
-			<p>
-				<small>Project 5 <a target="_blank" href="#"><i class="icon-external-link"></i></a></small>
-			</p>
-		</div>
+            <a class="thumbnail" target="_blank" href="" title="Micromouse Robot"><img src="assets/img/resume.png" alt=""></a>
+            <p>
+                <small>Resume <a target="_blank" href="#"><i class="icon-external-link"></i></a></small>
+            </p>
+        </div>
 	</div>
-	<div class="row" id="sample-work-row2">
-		<div class="span2">
-			 &nbsp;
-		</div>
-		<div class="span2">
-			<a class="thumbnail" target="_blank" href="#" title="Wordpress"><img src="http://placehold.it/200x100" alt=""></a>
-			<p>
-				<small>Project 6 <a target="_blank" href="#"><i class="icon-external-link"></i></a></small>
-			</p>
-		</div>
-		<div class="span2">
-			<a class="thumbnail" target="_blank" href="#" title="New Design"><img src="http://placehold.it/200x100" alt=""></a>
-			<p>
-				<small>Project 7 <a target="_blank" href="#"><i class="icon-external-link"></i></a></small>
-			</p>
-		</div>
-		<div class="span2">
-			<a class="thumbnail" target="_blank" href="#" title="Redesign"><img src="http://placehold.it/200x100" alt=""></a>
-			<p>
-				<small>Project 8 <a target="_blank" href="#"><i class="icon-external-link"></i></a></small>
-			</p>
-		</div>
-		<div class="span2">
-			<a class="thumbnail" target="_blank" href="#" title="Custom CMS"><img src="http://placehold.it/200x100" alt=""></a>
-			<p>
-				<small>Project 9 <a target="_blank" href="#"><i class="icon-external-link"></i></a></small>
-			</p>
-		</div>
-		<div class="span2">
-			<a class="thumbnail" target="_blank" href="#" title="Wordpress"><img src="http://placehold.it/200x100" alt=""></a>
-			<p>
-				<small>Project 10 <a target="_blank" href="#"><i class="icon-external-link"></i></a></small>
-			</p>
-		</div>
-	</div>
+	
 	<!-- /sample work -->
 
 	<!-- footer -->
